package com.mouse.bet.enums;

public enum BetStatus {
    PENDING,
    PROCESSING,
    COMPLETED,
    FAILED
}
