package com.mouse.bet.enums;

public enum OutcomeType {
}
